syntax = "proto3";

package health.v1;

message CheckRequest {}
message CheckResponse { string status = 1; }

service HealthService {
  rpc Check(CheckRequest) returns (CheckResponse);
}
